# fernet-cli

./: LICENSE  fernet_cli.py  pyproject.toml  taplo.toml
src/fernet/: __init__.py
